fixed weather spacing. fixed flickr image contain

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   .flickr{
     height: 20%;
     width:100%;
-  } 
+  }
   .weather{
     /* background-color: lightgrey; */
     height: 40%;
@@ -93,7 +93,8 @@
     background-size: 100% 100%;
     float: left;
   }
-
-
- 
-    
+  .flickrImage {
+    height: 100%;
+    width: 100%;
+    background-size: contain
+  }
